--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
                 "Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
             </p>
         </blockquote>
+        <section class="assortment">
+            <div class="container">
+                <ul class="assortment__list">
+                   <li class="assortment__item">
+                    <img src="images/black1.jpg" alt="" class="assortment__img">
+                    <p class="assortment__name">black</p>
+                   </li>
+                   <li class="assortment__item">
+                    <img src="images/Green.jpg" alt="" class="assortment__img">
+                    <p class="assortment__name">Green</p>
+                   </li>
+                   <li class="assortment__item">
+                    <img src="images/White.jpg" alt="" class="assortment__img">
+                    <p class="assortment__name">White</p>
+                   </li>
+                   <li class="assortment__item">
+                    <img src="images/Oolong.jpg" alt="" class="assortment__img">
+                    <p class="assortment__name">Oolong</p>
+                   </li>
+                   <li class="assortment__item">
+                    <img src="images/Pu-erh.jpg" alt="" class="assortment__img">
+                    <p class="assortment__name">Pu-erh</p>
+                   </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="js/main.js"></script>
