--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         </blockquote>
         <section class="assortment">
             <div class="container">
+                <h2 class="title assortment__title">
+                    Explore our Collections
+                </h2>
                 <ul class="assortment__list">
                    <li class="assortment__item">
                     <img src="images/black1.jpg" alt="" class="assortment__img">
@@ -150,6 +153,33 @@
                    </li>
                 </ul>
             </div>
+        </section>
+        <section class="reviews">
+            <div class="container">
+            <h2 class="title">
+                What our Clients say
+            </h2>
+            <ul class="reviews__list">
+                <li class="reviews__item">
+                    
+                        <p class="reviews__text">"As a tea enthusiast, I have tried teas from all over the world, but this tea store truly stands out. Their teas are of the highest quality and the variety is impressive. This is definitely a tea store that every tea lover should visit."</p>
+                        <cite class="reviews__name">Alice</cite>
+                    
+                </li>
+                <li class="reviews__item">
+                        <p class="reviews__text">"This tea store is my go-to for all my tea needs. Their selection is unbeatable and the quality of their teas is exceptional."</p>
+                        <cite class="reviews__name">Mad-Hatter</cite>
+                </li>
+                <li class="reviews__item">
+                        <p class="reviews__text">"If you're a tea lover, you must visit this tea store. The selection is vast and the quality is outstanding. I guarantee you won't be disappointed."</p>
+                        <cite class="reviews__name">Dormouse</cite>
+                </li>
+                <li class="reviews__item reviews__item--hide">
+                        <p class="reviews__text">"I am not a big tea drinker, but this tea store has converted me. I highly recommend this tea store to anyone looking for a high-quality tea experience."</p>
+                        <cite class="reviews__name">March Hare</cite>
+                </li>
+            </ul>
+        </div>
         </section>
     </main>
 
