--- a/index.html
+++ b/index.html
@@ -181,6 +181,96 @@
             </ul>
         </div>
         </section>
+        <section class="main__blog">
+            <div class="container">
+                <h2 class="title">Our Tea Blog</h2>
+                <ul class="main-blog__list">
+                    <li class="main-blog__item">
+                        <img src="images/blog-1.jpg" alt="" class="main-blog__item">
+                        <div class="main-blog__item-content">
+                            <h3 class="main-blog__item-title">Tea Time Travels: Funny Moments from Around the World</h3>
+                            <a href="#" class="main-blog__item-author">by Robinson Crusoe</a>
+                            <a href="#" class="main-blog__item-link">Read</a>
+                        </div>
+                    </li>
+                    <li class="main-blog__item">
+                        <img src="images/blog-2.jpg" alt="" class="main-blog__item">
+                        <div class="main-blog__item-content">
+                            <h3 class="main-blog__item-title">Tea-rific Tales: Hilarious Stories from Tea Lovers</h3>
+                            <a href="#" class="main-blog__item-author">by Casper the Friendly Ghost</a>
+                            <a href="#" class="main-blog__item-link">Read</a>
+                        </div>
+                    </li>
+                    <li class="main-blog__item">
+                        <img src="images/blog-3.jpg" alt="" class="main-blog__item">
+                        <div class="main-blog__item-content">
+                            <h3 class="main-blog__item-title">The Role of Tea in Mental Health,Role of Tea in Mental Health</h3>
+                            <a href="#" class="main-blog__item-author">by Joker</a>
+                            <a href="#" class="main-blog__item-link">Read</a>
+                        </div>
+                    </li>
+                    <li class="main-blog__item">
+                        <img src="images/blog-4.jpg" alt="" class="main-blog__item">
+                        <div class="main-blog__item-content">
+                            <h3 class="main-blog__item-title">Tea and Caffeine: Effects on the Brain and Behavior</h3>
+                            <a href="#" class="main-blog__item-author">by Author Authorius</a>
+                            <a href="#" class="main-blog__item-link">Read</a>
+                        </div>
+                    </li>
+                </ul>
+                <a href="#" class="main-blog__link">View all</a>
+            </div>
+        </section>
+        <section class="mailing-list">
+            <div class="container">
+                <h2 class="title mailing-list__title">
+                    Want to know more?
+                </h2>
+                <div class="mailing-list__inner">
+                 <p class="mailing-list__text">
+                    Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our tea store. Be the first to know about new tea arrivals, seasonal blends, and special discounts. Don't miss out on the tea-rrific perks - sign up today!
+                 </p>
+                  <form action="" class="mailing-list__form">
+                     <input class="mailing-list__email" type="email" placeholder="name@email.com">
+                     <button class="mailing-list__btn" type="submit">Join</button>
+                     <label>
+                        <input class="checkbox" type="checkbox">
+                        <span class="checkbox-style"></span>
+                        <p class="checkbox__text">
+                            We take your privacy seriously and are committed to protecting your personal information. By subscribing to our mailing list, you are consenting to receive periodic emails from us about our products, promotions, and other tea-related information.
+                        </p>
+                    </label>
+                  </form>
+                </div>
+            </div>
+        </section>
+        <section class="prioritise">
+            <div class="container">
+                <h2 class="title">We Prioritise</h2>
+                <ul class="prioritise__list">
+                    <li class="prioritise__item">
+                        <h4 class="prioritise__title">Single garden teas</h4>
+                        <p class="prioritise__text">Complete transparency</p>
+                        <img src="images/Prioritise-1.svg" alt="">
+                    </li>
+                    <li class="prioritise__item">
+                        <h4 class="prioritise__title">Only Loose leaf tea</h4>
+                        <p class="prioritise__text">Best Drinking Experience</p>
+                        <img src="images/Prioritise-2.svg" alt="">
+                    </li>
+                    <li class="prioritise__item">
+                        <h4 class="prioritise__title">Customer support</h4>
+                        <p class="prioritise__text">No bots, no automated replies</p>
+                        <img src="images/Prioritise-3.svg" alt="">
+                    </li>
+                    <li class="prioritise__item">
+                        <h4 class="prioritise__title">Fast shipping</h4>
+                        <p class="prioritise__text">Save, Convenient, Reliable</p>
+                        <img src="images/Prioritise-4.svg" alt="">
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="js/main.js"></script>
