footer_demo3hourse

--- a/index.html
+++ b/index.html
@@ -271,6 +271,98 @@
                 </ul>
             </div>
         </section>
+        <footer class="footer">
+           <div class="container">  
+              <div class="footer__all">              
+                <ul class="products__list">
+                     <li class="products__items"><h4 class="products__title">Products</h5></li>
+                     <li class="products__items">Black tea</li>
+                     <li class="products__items">Green tea</li>
+                     <li class="products__items">White tea</li>
+                     <li class="products__items">Oolong tea</li>
+                     <li class="products__items">Pu-erh tea</li>
+                </ul>
+                <ul class="Company_list">
+                    <li class="Company_items"><h4 class="Company__title">Company</h5></li>
+                    <li class="Company_items">About Us</li>
+                    <li class="Company_items">Contact Us</li>
+                    <li class="Company_items">Our Blog</li>
+                    <li class="Company_items">FAQ</li>
+                    <li class="Company_items">Shipping & Delivery</li>
+                    <li class="Company_items">Refund policy</li>
+                    <li class="Company_items">Terms of Service</li>
+                </ul>
+                    <div class="footer__solve">
+                        <p class="footer__big-text">“Tea is a journey. It can take you to new places and open your mind to new experiences. Let every sip transport you to a world of wonder and possibility”</p>
+                        <p class="footer_mini-text">Dragomir Teodorescu, Tealuxe owner</p>
+                    </div>
+               <ul class="Stay_In_Touch">
+                    <li class="products__items"><h4 class="title_Stay_In_Touch">Stay In Touch</h5></li>
+                    <li class="products__items"><p class="stay_in">Please feel free to contact us via the email of phone. We would be happy to hear from you!</p></li>
+                    <!-- <li class="products__items"><img class="img_stay_in" src="images/logo.svg" alt=""></li> -->
+                      <div class="info__brat">
+                        <img class="img_stay_in" src="images/logo.svg" alt="">
+                        <ul class="info__brat__list">
+                            <li class="info__brat__items">
+                                <img src="images/number_f.png" alt="" class="number">
+                                <p class="number">+370 680 123456</p>
+                            </li>
+                            <li class="info__brat__items">
+                                <img src="images/email_f.png" alt="" class="email">
+                                <p class="email">info@tealuxe.com</p>
+                            </li>
+                        </ul>
+                      </div>
+                    <!-- <li class="products__items">
+                       <ul class="number__email">
+                          <li class="number__email__items">
+                            <img src="images/number_f.png" alt="" class="number">
+                            <p class="number__text">+370 680 123456</p>
+                          </li>
+                          <li class="number__email__items">
+                            <img src="images/email_f.png" alt="" class="email">
+                            <p class="email__text">info@tealuxe.com</p>
+                          </li>
+                       </ul> 
+                    </li> -->
+                    <li class="Stay_In_Touch__logos">
+                        <ul class="logops__list">
+                            <li class="logops__items">
+                                <img src="images/facebook.png" alt="">
+                            </li>
+                            <li class="logops__items">
+                                <img src="images/youtube.png" alt="">
+                            </li>
+                            <li class="logops__items">
+                                <img src="images/inst.png" alt="">
+                            </li>
+                            <li class="logops__items">
+                                <img src="images/x.png" alt="">
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                    <div class="footer__footer__footer">
+                        <p class="footer__end">© Tealuxe, 2023</p>
+                        <ul class="footer__img-list">
+                            <li class="footer__img-items">
+                                <img src="images/mastercard.png" alt="">
+                            </li>
+                            <li class="footer__img-items">
+                                <img src="images/visa.png" alt="">
+                            </li>
+                            <li class="footer__img-items">
+                                <img src="images/google-pay.png" alt="">
+                            </li>
+                            <li class="footer__img-items">
+                                <img src="images/paypal.png" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                
+              </div> 
+            </div>
+        </footer>
     </main>
 
     <script src="js/main.js"></script>
